[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langevals"
version = "0.1.2"
description = "A platform to evaluate LLM outputs using various evaluators."
authors = [ "Rogerio Chaves <rogerio@langwatch.ai>",]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
hypercorn = "^0.16.0"
pydantic = "^2.6.4"
python-dotenv = "1.0.1"
mangum = "^0.17.0"

[tool.poetry.scripts]
langevals-server = "langevals.server:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
toml = "^0.10.2"
grevillea = "^0.0.1"

[tool.poetry.extras]
azure = [ "langevals-azure",]
openai = [ "langevals-openai",]
example = [ "langevals-example",]
ragas = [ "langevals-ragas",]
google_cloud = [ "langevals-google_cloud",]
custom = [ "langevals-custom",]
lingua = [ "langevals-lingua",]
aws = [ "langevals-aws",]
huggingface = [ "langevals-huggingface",]
intent = [ "langevals-intent",]
langevals = [ "langevals-langevals",]

[tool.poetry.dependencies.langevals-core]
path = "langevals_core"
develop = true

[tool.poetry.dependencies.langevals-azure]
path = "evaluators/azure"
develop = true
optional = true

[tool.poetry.dependencies.langevals-openai]
path = "evaluators/openai"
develop = true
optional = true

[tool.poetry.dependencies.langevals-example]
path = "evaluators/example"
develop = true
optional = true

[tool.poetry.dependencies.langevals-ragas]
path = "evaluators/ragas"
develop = true
optional = true

[tool.poetry.dependencies.langevals-google_cloud]
path = "evaluators/google_cloud"
develop = true
optional = true

[tool.poetry.dependencies.langevals-custom]
path = "evaluators/custom"
develop = true
optional = true

[tool.poetry.dependencies.langevals-lingua]
path = "evaluators/lingua"
develop = true
optional = true

[tool.poetry.dependencies.langevals-aws]
path = "evaluators/aws"
develop = true
optional = true

[tool.poetry.dependencies.langevals-huggingface]
path = "evaluators/huggingface"
develop = true
optional = true

[tool.poetry.dependencies.langevals-langevals]
path = "evaluators/langevals"
develop = true
optional = true
