[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langevals"
version = "0.1.7"
description = "A platform to evaluate LLM outputs using various evaluators."
authors = [ "Rogerio Chaves <rogerio@langwatch.ai>",]
license = "MIT"
[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
pytest = "^8.1.2"
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
python-dotenv = "1.0.1"
mangum = "^0.17.0"
pandas = "^2.2.2"
markdown = "^3.6"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
[[tool.poetry.dependencies.torch]]
version = "^2.2.2+cpu"
optional = true
source = "pytorch_cpu"
markers = "sys_platform == 'linux'"

[[tool.poetry.dependencies.torch]]
version = "^2.2.2"
optional = true
source = "pypi"
markers = "sys_platform != 'linux'"

[tool.poetry.scripts]
langevals-server = "langevals.server:main"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
grevillea = "^0.0.1"
litellm = "^1.41.25"
instructor = "^1.2.2"
pytest-xdist = "^3.5.0"
flaky = "^3.8.1"

[tool.poetry.extras]
azure = [ "langevals-azure",]
openai = [ "langevals-openai",]
example = [ "langevals-example",]
ragas = [ "langevals-ragas",]
google_cloud = [ "langevals-google_cloud",]
lingua = [ "langevals-lingua",]
aws = [ "langevals-aws",]
huggingface = [ "langevals-huggingface",]
langevals = [ "langevals-langevals",]
all = [ "langevals-azure", "langevals-example", "langevals-lingua", "langevals-ragas", "langevals-google_cloud", "langevals-haystack", "langevals-presidio", "langevals-aws", "langevals-huggingface", "langevals-openai",]
haystack = [ "langevals-haystack",]
presidio = [ "langevals-presidio",]

[tool.poetry.dependencies.langevals-core]
path = "langevals_core"
develop = true

[tool.poetry.dependencies.langevals-azure]
path = "evaluators/azure"
develop = true
optional = true

[tool.poetry.dependencies.langevals-openai]
path = "evaluators/openai"
develop = true
optional = true

[tool.poetry.dependencies.langevals-example]
path = "evaluators/example"
develop = true
optional = true

[tool.poetry.dependencies.langevals-ragas]
path = "evaluators/ragas"
develop = true
optional = true

[tool.poetry.dependencies.langevals-google_cloud]
path = "evaluators/google_cloud"
develop = true
optional = true

[tool.poetry.dependencies.langevals-lingua]
path = "evaluators/lingua"
develop = true
optional = true

[tool.poetry.dependencies.langevals-aws]
path = "evaluators/aws"
develop = true
optional = true

[tool.poetry.dependencies.langevals-huggingface]
path = "evaluators/huggingface"
develop = true
optional = true

[tool.poetry.dependencies.langevals-langevals]
path = "evaluators/langevals"
develop = true
optional = false

[tool.poetry.dependencies.langevals-haystack]
path = "evaluators/haystack"
develop = true
optional = true

[tool.poetry.dependencies.langevals-presidio]
path = "evaluators/presidio"
develop = true
optional = true

[tool.poetry.plugins.pytest11]
pass_rate_plugin = "langevals.pytest_plugins.pass_rate_plugin"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
