[tool.poetry]
name = "langevals-core"
version = "0.1.8"
description = "Core package for LLM evaluation platform, providing base classes and utilities."
authors = ["Rogerio Chaves <rogerio@langwatch.ai>", "Yevhenii Budnyk <y.budnyk789@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pandas = "^2.2.2"
tqdm = "^4.66.4"
litellm = "^1.40.7"
tenacity = "^8.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
