[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langevals-notebook"
version = "0.1.3"
description = "A platform to evaluate LLM outputs using various evaluators."
authors = [ "Rogerio Chaves <rogerio@langwatch.ai>",]
license = "MIT"
package-mode = false
[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
pytest = "^8.1.2"
python = "^3.11"
arize-phoenix = {version = "^4.9.0", python = ">=3.11,<3.13"}
openinference-instrumentation-dspy = {version = "^0.1.9", python = ">=3.11,<3.13"}
opentelemetry-exporter-otlp = "^1.25.0"
fastapi = "^0.110.0"
hypercorn = "^0.16.0"
pydantic = "^2.4.0"
python-dotenv = "1.0.1"
mangum = "^0.17.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
ipywidgets = "^8.1.2"
dspy = "^2.5.43"
seaborn = "^0.13.2"
sentence-transformers = "^3.0.0"
faiss-cpu = "1.8.0"
presidio-analyzer = "^2.2.355"
presidio-anonymizer = "^2.2.355"
[[tool.poetry.dependencies.torch]]
version = "^2.2.2+cpu"
optional = false
source = "pytorch_cpu"
markers = "sys_platform == 'linux'"

[[tool.poetry.dependencies.torch]]
version = "^2.2.2"
optional = false
source = "pypi"
markers = "sys_platform != 'linux'"

[tool.poetry.scripts]
langevals-server = "langevals.server:main"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
grevillea = "^0.0.1"
litellm = "^1.53.7"
instructor = "^1.2.2"
pytest-xdist = "^3.5.0"
flaky = "^3.8.1"

[tool.poetry.dependencies.langevals-core]
path = "../langevals_core"
develop = true

[tool.poetry.dependencies.langevals-azure]
path = "../evaluators/azure"
develop = true
optional = false

[tool.poetry.dependencies.langevals-openai]
path = "../evaluators/openai"
develop = true
optional = false

[tool.poetry.dependencies.langevals-example]
path = "../evaluators/example"
develop = true
optional = false

[tool.poetry.dependencies.langevals-ragas]
path = "../evaluators/ragas"
develop = true
optional = false

[tool.poetry.dependencies.langevals-google_cloud]
path = "../evaluators/google_cloud"
develop = true
optional = false

[tool.poetry.dependencies.langevals-lingua]
path = "../evaluators/lingua"
develop = true
optional = false

[tool.poetry.dependencies.langevals-aws]
path = "../evaluators/aws"
develop = true
optional = false

[tool.poetry.dependencies.langevals-huggingface]
path = "../evaluators/huggingface"
develop = true
optional = false

[tool.poetry.dependencies.langevals-langevals]
path = "../evaluators/langevals"
develop = true
optional = false

[tool.poetry.dependencies.langevals]
path = "../"
develop = true
optional = false

[tool.poetry.plugins.pytest11]
pass_rate_plugin = "langevals.pytest_plugins.pass_rate_plugin"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

