[tool.poetry]
name = "langevals-azure"
version = "0.1.0"
description = "LangEvals Azure Content Safety evaluator for LLM outputs."
authors = ["Rogerio Chaves <rogerio@langwatch.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langevals_core = { path = "../../langevals_core", develop = true }
azure-ai-contentsafety = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
