[tool.poetry]
name = "langevals-azure"
version = "0.1.12"
description = "LangEvals Azure Content Safety evaluator for LLM outputs."
authors = ["Rogerio Chaves <rogerio@langwatch.ai>", "Yevhenii Budnyk <y.budnyk789@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langevals-core = { path = "../../langevals_core", develop = true }
azure-ai-contentsafety = "^1.0.0"
httpx = "^0.27.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
