[tool.poetry]
name = "langevals-huggingface"
version = "0.1.15"
description = "Evaluators based on models available on huggingface."
authors = [
  "Rogerio Chaves <rogerio@langwatch.ai>",
  "Yevhenii Budnyk <y.budnyk789@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langevals-core = { path = "../../langevals_core", develop = true }
httpx = "^0.27.0"
litellm = "^1.79.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
