[tool.poetry]
name = "langevals-langevals"
version = "0.1.16"
description = "LangEvals core evaluators."
authors = ["Rogerio Chaves <rogerio@langwatch.ai>", "Yevhenii Budnyk <y.budnyk789@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
litellm = "^1.79.0"
langevals-core = { path = "../../langevals_core", develop = true }
openai = ">=1.59.7"
numpy = "^1.26.4"
dspy = "^2.6.8"
markdown = "^3.7"
jsonschema = "^4.23.0"
sqlglot = {extras = ["rs"], version = "^25.32.0"}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"