[tool.poetry]
name = "langevals-legacy"
version = "0.1.14"
description = "LangEvals Legacy evaluator"
authors = [
  "Rogerio Chaves <rogerio@langwatch.ai>",
  "Yevhenii Budnyk <y.budnyk789@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langevals-core = { path = "../../langevals_core", develop = true }
langchain-openai = ">=0.1.23"
langchain_community = ">=0.2.16"
datasets = "2.14.6"
litellm = "1.76.0"
pysbd = "^0.3.4"
appdirs = "^1.4.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
