[tool.poetry]
name = "langevals-openai"
version = "0.1.16"
description = "LangEvals OpenAI moderation evaluator for LLM outputs."
authors = ["Rogerio Chaves <rogerio@langwatch.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langevals-core = { path = "../../langevals_core", develop = true }
openai = ">=1.27.0"
tqdm = "^4.66.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
