[tool.poetry]
name = "langevals-ragas"
version = "0.1.5"
description = "LangEvals Ragas evaluator"
authors = ["Rogerio Chaves <rogerio@langwatch.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langevals-core = { path = "../../langevals_core", develop = true }
ragas = "^0.1.7"
langchain-openai = "^0.1.6"
langchain_community = "^0.0.27"
datasets = "2.14.6"
litellm = "^1.40.4"
langchain-anthropic = "^0.1.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
