[tool.poetry]
name = "langevals-ragas"
version = "0.1.13"
description = "LangEvals Ragas evaluator"
authors = [
  "Rogerio Chaves <rogerio@langwatch.ai>",
  "Yevhenii Budnyk <y.budnyk789@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langevals-core = { path = "../../langevals_core", develop = true }
ragas = "0.2.9"
langchain-openai = ">=0.1.23"
langchain_community = ">=0.2.16"
litellm = "^1.61.20"
rapidfuzz = "^3.11.0"
sacrebleu = "^2.5.1"
rouge-score = "^0.1.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
python-dotenv = "^1.0.1"
flaky = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
